@@ -4,6 +4,7 @@
 	* Fixed issue #12530: Erroneous country zone codes for Austria
 	* Follow-up to issue #12530: Erroneous country zone codes for Austria (remove country code)
 	* Follow-up to feature #9423: Add country zones for the regions and departments of France (remove country code)
+	* Fixed bugtracker issue #6901: Remove DEFAULT '0' from uid fields sql definition
 
 2011-01-24  Stanislas Rolland  <typo3@sjbr.ca>
 
